name:               gruzestore
version:            0.1
synopsis:           Object store
description:        Inspired by Elgg (http://elgg.org).
category:           Data
license:            GPL
license-file:       LICENSE
author:             Kevin Jardine
maintainer:         kevin@gruze.org
Tested-With:        GHC == 6.12.1
stability:          unstable
cabal-version:      >= 1.6
build-type:         Simple
homepage:           http://gruze.org
hs-source-dirs:     .
build-depends:      base >= 4 && < 5, containers, split, HDBC,

                    -- uncomment one of these three
                    HDBC-sqlite3,
                    -- HDBC-odbc,
                    -- HDBC-postgresql, 
                    
                    bytestring, old-time, time, old-locale, random, process, directory, 
                    template-haskell
                    
exposed-modules:    Data.Store.Gruze,
                    Data.Store.Gruze.Templates
                    
other-modules:      Data.Store.Gruze.Types,
                    Data.Store.Gruze.Box,
                    Data.Store.Gruze.IO,
                    Data.Store.Gruze.QueryDef,
                    Data.Store.Gruze.Utility,
                    Data.Store.Gruze.Query,
                    
                    -- uncomment one of these three Connection options
                    Data.Store.Gruze.Connection.Sqlite3,
                    -- Data.Store.Gruze.Connection.ODBC,
                    -- Data.Store.Gruze.Connection.PostgreSQL,                    
                    
                    Data.Store.Gruze.Handles
                    
