name:               gruze
version:            0.1
synopsis:           Object store
description:        Inspired by Elgg (http://elgg.org).
category:           Data
license:            GPL
license-file:       LICENSE
author:             Kevin Jardine
maintainer:         kevin@gruze.org
Tested-With:        GHC == 6.12.1
stability:          unstable
cabal-version:      >= 1.6
build-type:         Simple
homepage:           http://gruze.org
hs-source-dirs:     .
build-depends:      base >= 4 && < 5, containers, split, HDBC, bytestring,
                    old-time, time, old-locale, random, process, directory, 
                    template-haskell
                    
exposed-modules:    Database.Gruze,
                    Database.Gruze.Box,
                    Database.Gruze.Templates
                    
other-modules:      Database.Gruze.Types,
                    Database.Gruze.IO,
                    Database.Gruze.QueryDef,
                    Database.Gruze.Utility,
                    Database.Gruze.Query,          
                    Database.Gruze.Handles
                    
